<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:visibility="visible"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <EditText
        android:id="@+id/enter_todo_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:backgroundTint="@color/colorSecondaryText"
        android:hint="@string/enter_todo_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/dimen_16"
        android:textColor="#070707"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/today_calendar_button"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/calendar_icon"
        android:background="@drawable/button_shadow"
        android:elevation="10dp" />

    <ImageButton
        android:id="@+id/priority_todo_button"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/alert_icon"
        android:background="@drawable/button_shadow"
        android:elevation="10dp" />

    <ImageButton
        android:id="@+id/save_todo_button"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="TODO"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/priority_todo_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/save_icon"
        android:background="@drawable/button_shadow"
        android:elevation="10dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="88dp"
        android:gravity="center_horizontal"
        android:text="@string/due_date_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button" />

    <com.google.android.material.chip.Chip
        android:id="@+id/today_chip"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:text="@string/today"
        app:chipIcon="@drawable/today_icon"
        app:layout_constraintEnd_toEndOf="@+id/tomorrow_chip"
        app:layout_constraintStart_toStartOf="@+id/tomorrow_chip"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tomorrow_chip"
        android:layout_width="269dp"
        android:layout_height="41dp"
        android:text="@string/tomorrow"
        app:chipIcon="@drawable/tommorow_icon"
        app:layout_constraintEnd_toEndOf="@+id/next_month_chip"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/next_month_chip"
        app:layout_constraintTop_toBottomOf="@+id/today_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/next_month_chip"
        android:layout_width="272dp"
        android:layout_height="41dp"
        android:background="@android:color/transparent"
        android:text="@string/next_week"
        app:chipIcon="@drawable/next_month_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_chip" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="318dp"
        android:layout_height="305dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/calendar"
        android:elevation="24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_month_chip" />


    <RadioGroup
        android:id="@+id/radioGroup_priority"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10"
        android:visibility="gone"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button">

        <RadioButton
            android:id="@+id/radioButton_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBg"
            android:text="@string/radio_high" />

        <RadioButton
            android:id="@+id/radioButton_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBg"
            android:text="@string/radio_low" />
    </RadioGroup>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="calendar_view,next_month_chip,tomorrow_chip,today_chip,textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>